--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,11 +39,11 @@ body {
   height: 100%;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+// *,
+// *::before,
+// *::after {
+//   box-sizing: border-box;
+// }
 
 a,
 a:focus,
