refactor: 优化表单创建 UI

--- a/src/common/assets/styles/index.scss
+++ b/src/common/assets/styles/index.scss
@@ -14,6 +14,8 @@
 @import "./mixins.scss";
 // View Transition
 @import "./view-transition.scss";
+// 确认对话框样式
+@import "./close-dialog.scss";
 
 // 业务页面几乎都应该在根元素上挂载 class="app-container"，以保持页面美观
 .app-container {
